--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="text left">
                     <p id="topquote">“When I photograph I make love.”</p>
                     <p><b> Welcome</b>, this is a place of photography and love for every part of it.<br/> 
-                        At this point you have a plethora of my photos that I wanted to share with you.If you are interested in more information click <a href="#gallery"> hire </a> !</p>
+                        At this point you have a plethora of my photos that I wanted to share with you.If you are interested in more information click <a href="#gallery"> here </a> !</p>
                 </div>
                 <div class="right">
                     <div id="photographer">
@@ -57,7 +57,7 @@
                     <b>Photography is the art of making memories tangible.</b>
                     <h2>Make memories with us</h2>
                     <p>With us, you can embark on a photo-shooting adventure, have endless fun, above all, get great pictures and the possibility of finishing them in an amazing way. 
-                        You can see all our offers by clicking on the link <a href="assets/offers.html">hire</a>,  
+                        You can see all our offers by clicking on the link <a href="assets/offers.html">here</a>,  
                         and schedule your own photoshoot adventure.</p>
                 </div>
                 <div class="cleaner"></div>
