--- a/assets/author.html
+++ b/assets/author.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="right text">
-                    <p id="topquote">Hy!</p><br/>
+                    <p id="topquote">Hi!</p><br/>
                     <p>My name is <a href="https://miljana20.github.io/PORTFOLIO/" target="_blank"> Miljana</a>, a future programmer. I am currently studying Web programming at ICT College in Belgrade. I am eager to learn new programming languages and become a full-stack developer.</p><br/>
                     <p> I started my education in Rogatica where I finished high school. I am currently studying Web programming at ICT College in Belgrade.For more information check out my <a href="https://miljana20.github.io/PORTFOLIO/" target="_blank">portfolio</a>!</p>
                 </div>
