--- a/assets/offers.html
+++ b/assets/offers.html
@@ -36,7 +36,7 @@
             </header>
             <h1>Photoshoot offers</h1>
             <div class="box">
-                <table>
+                <table class="a-l">
                     <tr>
                         <th colspan="2">Individual photoshoots</th>
                     </tr>
@@ -51,7 +51,7 @@
                 </table>
             </div>
             <div class="box">
-                <table>
+                <table class="a-r">
                     <tr>
                         <th colspan="2">Group photoshoots</th>
                     </tr>
@@ -74,7 +74,7 @@
                 </table>
             </div>
             <div class="box">
-                <table>
+                <table class="a-l">
                     <tr>
                         <th colspan="2">Events</th>
                     </tr>
@@ -93,7 +93,7 @@
                 </table>
             </div>
             <div class="box">
-                <table>
+                <table class="a-r">
                     <tr>
                         <th colspan="2">Other types of photoshoots</th>
                     </tr>
