--- a/assets/offers.html
+++ b/assets/offers.html
@@ -18,6 +18,7 @@
     </head>
     <body>
         <main class="center">
+            <!--Header with logo and navigation-->
             <header>
                 <div class="logo">
                     <a href="index.html"><img src="img/logo1.png" alt="logo"></a>
@@ -34,6 +35,7 @@
                 </nav>
                 <div class="cleaner"></div>
             </header>
+            <!--The content of the page about the offers-->
             <h1>Photoshoot offers</h1>
             <div class="box">
                 <table class="a-l">
@@ -108,6 +110,7 @@
                 </table>
             </div>
         </main>
+        <!--Footer with social media, Css, Rss and Sitemap links-->
         <footer>
             <ul>
                 <li><a href="https://twitter.com/?lang=sr" target="_blank"><i class="fab fa-twitter"></i></a></li>
