--- a/assets/author.html
+++ b/assets/author.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <!--Header with logo and navigation-->
-            <header>
+            <header class="white-bg">
                 <div class="logo">
                     <a href="index.html"><img src="img/logo1.png" alt="logo"></a>
                 </div>
