--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!--Header with logo and navigation-->
             <header>
                 <div class="logo">
-                    <a href="index.html"><img src="assets/img/logo1.png" alt="logo"></a>
+                    <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
                 </div>
                 <nav>
                     <ul>
