--- a/assets/offers.html
+++ b/assets/offers.html
@@ -20,7 +20,7 @@
     <!--Header with logo and navigation-->
         <header class="white-bg">
             <div class="logo">
-                <a href="index.html"><img src="img/logo1.png" alt="logo"></a>
+                <a href="index.html"><img src="img/logo.png" alt="logo"></a>
             </div>
             <nav>
                 <ul>
