--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="box" id="contact">
                 <h1>Contact me</h1>
                 <div class="pt">
-                    <div id="c1">
+                    <div id="c1" class="a-l">
                         <img src="assets/img/blondgirl.jpg" alt="Blond girl.">
                     </div>
                     <div class="contact" id="c2"> 
