--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="box mt" id="gallery">
                 <h1>My Work</h1>
                 <div id="row">
-                    <div class="column">
+                    <div class="column a-l">
                         <img src="assets/img/bdaygirl1.jpg" alt="Birthday girl." class="img"/>
                         <img src="assets/img/bdaygirl2.jpg" alt="Birthday girl." class="img"/>
                         <img src="assets/img/browngirl1.jpg" alt="Brown girl." class="img"/>
@@ -125,7 +125,7 @@
                         <img src="assets/img/boywithcigaret1.jpg" alt="Boy with cigarette." class="img"/>
                         <img src="assets/img/girl1.jpg" alt="Girl." class="img"/>
                     </div>
-                    <div class="column">
+                    <div class="column a-l">
                         <a href="index.html"><img src="assets/img/logo.png" alt="logo" id="logo2"></a>
                         <img src="assets/img/car1.jpg" alt="Part of the car." class="img"/>
                         <img src="assets/img/car2.jpg" alt="Part of the car." class="img"/>
@@ -138,7 +138,7 @@
                         <img src="assets/img/couple3.jpg" alt="Couple." class="img"/>
                         <img src="assets/img/girlinblack1.jpg" alt="Girl in black." class="img"/>
                     </div>
-                    <div class="column">
+                    <div class="column a-r">
                         <img src="assets/img/girlinblack3.jpg" alt="Girl in black." class="img"/>
                         <img src="assets/img/girlinblack4.jpg" alt="Girl in black." class="img"/>
                         <img src="assets/img/girlinred1.jpg" alt="Girl in red." class="img"/>
@@ -151,7 +151,7 @@
                         <img src="assets/img/couple.jpg" alt="Couple." class="img"/>
                         <img src="assets/img/town3.jpg" alt="Town." class="img"/>
                     </div>
-                    <div class="column">
+                    <div class="column a-r">
                         <img src="assets/img/browngirl.jpg" alt="Brown girl." class="img mt"/>
                         <img src="assets/img/girlwithrose1.jpg" alt="Girl with a rose." class="img"/>
                         <img src="assets/img/town2.jpg" alt="Town." class="img"/>
