--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     </div>
                     <div class="contact" id="c2"> 
                         <h2>Contact Me</h2>
-                        <form id="form">
+                        <form action="/action.php" method="get" id="form">
                             <div class="form-box">
                               <input type="text" name="name" id="name" placeholder="Your name.." required>
                             </div>
