--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <h1>My Work</h1>
                 <div id="row">
                     <div class="column a-l">
-                        <img src="assets/img/bdaygirl1.jpg" alt="Birthday girl." class="img"/>
+                        <img src="assets/img/bdaygirl1.jpg" alt="Birthday girl." class="img mt"/>
                         <img src="assets/img/bdaygirl2.jpg" alt="Birthday girl." class="img"/>
                         <img src="assets/img/browngirl1.jpg" alt="Brown girl." class="img"/>
                         <img src="assets/img/bdaygirl4.jpg" alt="Birthday girl." class="img"/>
