--- a/assets/offers.html
+++ b/assets/offers.html
@@ -118,7 +118,7 @@
                 <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="https://github.com/miljana20/" target="_blank"><i class="fab fa-github"></i></a></li>
             </ul>
-            <p>Design by <b>Miljana Nerić</b>. There are some usefull links for <a href="../sitemap.xml" target="_blank">Sitemap</a>, <a href="../assets/css/style.css" target="_blank"> Css</a> file and  <a href="../rss.xml" target="_blank">RSS</a>.</p> 
+            <p>Design by <b>Miljana Nerić</b>. There are some usefull links for <a href="../sitemap.xml" target="_blank">Sitemap <i class='fas fa-rss'></i> </a>, <a href="../assets/css/style.css" target="_blank"> Css</a> file and  <a href="../rss.xml" target="_blank">RSS</a>.</p> 
             <p> &copy; Copyright <a href="https://miljana20.github.io/PORTFOLIO/" target="_blank">Nerić Miljana</a>. All Rights Reserved.</p>
         </footer>
     </body>
