--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <meta name="description" content="I am Igor-photographer, come and check out my work."/>
         <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.png"/>
         <!--Google font-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@400&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+        <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@400&display=swap" rel="stylesheet"/>
         <!--Font Awesome-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"/>
         <!--CSS-->
-        <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <!--Header with logo and navigation-->
@@ -73,7 +73,7 @@
                             Of course when you add love to it all, photography becomes an overall pleasure.</p>
                     </div>
                     <div class="right" id="girl"> 
-                        <img src="assets/img/girl.jpg" alt="Girl.">
+                        <img src="assets/img/girl.jpg" alt="Girl."/>
                     </div>
                     <div class="cleaner"></div>
                 </div>
@@ -126,7 +126,7 @@
                         <img src="assets/img/girl1.jpg" alt="Girl." class="img"/>
                     </div>
                     <div class="column a-l">
-                        <a href="index.html"><img src="assets/img/logo.png" alt="logo" id="logo2"></a>
+                        <a href="index.html"><img src="assets/img/logo.png" alt="logo" id="logo2"/></a>
                         <img src="assets/img/car1.jpg" alt="Part of the car." class="img"/>
                         <img src="assets/img/car2.jpg" alt="Part of the car." class="img"/>
                         <img src="assets/img/bdaygirl3.jpg" alt="Birthday girl." class="img"/>
@@ -162,7 +162,7 @@
                         <img src="assets/img/blondgirl5.jpg" alt="Blond girl." class="img"/>
                         <img src="assets/img/boywithcigaret2.jpg" alt="Boy with cigarette." class="img"/>
                         <img src="assets/img/boy2.jpg" alt="Boy." class="img"/>
-                        <a href="index.html"><img src="assets/img/logo.png" alt="logo" id="logo1"></a>
+                        <a href="index.html"><img src="assets/img/logo.png" alt="logo" id="logo1"/></a>
                     </div>
                     <div class="cleaner"></div>
                 </div>
@@ -173,11 +173,11 @@
                 <h1>Contact me</h1>
                 <div class="pt">
                     <div id="c1" class="a-l">
-                        <img src="assets/img/blondgirl.jpg" alt="Blond girl.">
+                        <img src="assets/img/blondgirl.jpg" alt="Blond girl."/>
                     </div>
                     <div class="contact" id="c2"> 
                         <h2>Contact Me</h2>
-                        <form action="/action.php" method="get" id="form">
+                        <form action="#" method="get" id="form">
                             <div class="form-box">
                               <input type="text" name="name" id="name" placeholder="Your name.." required>
                             </div>
@@ -186,7 +186,7 @@
                             </div>
                             <textarea name="textarea" id="textarea" rows="10" placeholder="Your message.."></textarea>
                             <div class="form-box">
-                                <input type="submit" value="Send!">
+                                <input type="submit" id="submit" value="Send!">
                             </div>
                           </form>
                     </div>
