--- a/assets/author.html
+++ b/assets/author.html
@@ -3,14 +3,14 @@
     <head>
         <title>Igor Čolić - Photography | Author</title>
         <meta charset="UTF-8"/>
-        <meta name="author" content="Miljana Nerić, 20/20" />
-        <meta name="keywords" content="author"/>
+        <meta name="author" content="Miljana Nerić, 20/20"/>
+        <meta name="keywords" content="author, programmer, developer, web designer"/>
         <meta name="description" content="Come and check out more about author."/>
         <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png"/>
         <!--Google font-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@400&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+        <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@400&display=swap" rel="stylesheet"/>
         <!--Font Awesome-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"/>
         <!--CSS-->
@@ -20,7 +20,7 @@
         <!--Header with logo and navigation-->
             <header class="white-bg">
                 <div class="logo">
-                    <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+                    <a href="index.html"><img src="img/logo.png" alt="logo"/></a>
                 </div>
                 <nav>
                     <ul>
