--- a/assets/offers.html
+++ b/assets/offers.html
@@ -4,13 +4,13 @@
         <title>Igor Čolić - Photography | Offers</title>
         <meta charset="UTF-8"/>
         <meta name="author" content="Miljana Nerić, 20/20" />
-        <meta name="keywords" content="photographer, photography, picture, camera, photo shooting"/>
-        <meta name="description" content="I am Igor-photographer, come and check out my offers."/>
+        <meta name="keywords" content="photography, picture, camera, photo shooting, offers, offer"/>
+        <meta name="description" content="I am Igor-photographer, come and check out offers for customers."/>
         <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png"/>
         <!--Google font-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@400&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+        <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@400&display=swap" rel="stylesheet"/>
         <!--Font Awesome-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"/>
         <!--CSS-->
@@ -20,7 +20,7 @@
     <!--Header with logo and navigation-->
         <header class="white-bg">
             <div class="logo">
-                <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+                <a href="index.html"><img src="img/logo.png" alt="logo"/></a>
             </div>
             <nav>
                 <ul>
